--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#72F2EB</color>
+    <color name="primary_light">#A9FFFF</color>
+    <color name="primary_dark">#34BFB9</color>
+    <color name="secondary">#FF5F5D</color>
+    <color name="secondary_light">#FF928A</color>
+    <color name="secondary_dark">#C62833</color>
 </resources>
