--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".Splash">
+    <ImageView
+        android:id="@+id/manoIzq"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitStart"
+        android:src="@drawable/mano_izq"
+        app:layout_constraintRight_toLeftOf="@id/centerguide"
+        app:layout_constraintTop_toTopOf="@+id/manoDcha"
+        app:layout_constraintBottom_toBottomOf="@+id/manoDcha" />
 
+    <ImageView
+        android:id="@+id/manoDcha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitStart"
+        android:src="@drawable/mano_dcha"
+
+        app:layout_constraintLeft_toRightOf="@+id/centerguide"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/centerguide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.50"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
