--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="secondary">#FF5F5D</color>
     <color name="secondary_light">#FF928A</color>
     <color name="secondary_dark">#C62833</color>
+    <color name="dark_gray">#575858</color>
 </resources>
