--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="MyTheme.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="windowActionBar">false</item>
+    </style>
+
     <style name="mainbutton">
         <item name="android:layout_width">120dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -21,9 +25,11 @@
         <item name="android:fontFamily">@font/roboto</item>
     </style>
 
-    <style name="MyTheme.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="windowActionBar">false</item>
+    <style name="imageSpalshHands">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
+
 
 
 </resources>
