--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,10 +16,31 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/secondary</item>
-        <item name="cornerRadius">4dp</item>
+        <item name="cornerRadius">20dp</item>
         <item name="strokeColor">@color/secondary</item>
         <item name="android:fontFamily">@font/roboto</item>
     </style>
+    <style name="lineET" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/secondary</item>
+        <item name="colorControlActivated">@color/secondary</item>
+        <item name="android:textColorHighlight">@color/secondary</item>
+        <item name="android:fontFamily">@font/roboto</item>
+    </style>
+    <style name="compoeditableusu">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">32dp</item>
+    </style>
+    <style name="compoeditablepass">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="buttonlogin">
+        <item name="android:backgroundTint">@color/secondary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">20dp</item>
+    </style>
+
 
 
 
