--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="MyTheme.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="windowActionBar">false</item>
-    </style>
-
-    <style name="mainbutton">
-        <item name="android:layout_width">120dp</item>
+    <style name="buttonOutlinedRed" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="color">@color/secondary</item>
+        <item name="android:textColor">@color/white</item>
         <item name="cornerRadius">20dp</item>
         <item name="strokeColor">@color/secondary</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textStyle">bold</item>
     </style>
-
-    <style name="buttonoutlined" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="buttonOutlinedWhite" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/secondary</item>
@@ -40,32 +33,6 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    <style name="buttonlogin">
-        <item name="android:backgroundTint">@color/secondary</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="cornerRadius">20dp</item>
-    </style>
-    <style name="lineET" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">@color/secondary</item>
-        <item name="colorControlActivated">@color/secondary_dark</item>
-        <item name="android:textColorHighlight">@color/secondary_dark</item>
-        <item name="android:fontFamily">@font/roboto</item>
-    </style>
-    <style name="compoeditableusu">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">32dp</item>
-    </style>
-    <style name="compoeditablepass">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-    </style>
-    <style name="buttonlogin">
-        <item name="android:backgroundTint">@color/secondary</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="cornerRadius">20dp</item>
-    </style>
-
     <style name="imageSpalshHands">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
