--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -6,78 +6,87 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Initial"
+    android:background="@drawable/fondo_meet_map"
     >
-    <ImageView
-        android:id="@+id/image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/fondo_meet_map" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/slider"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="700px"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/midguide"
         android:orientation="vertical"
-        android:weightSum="5"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="600px"
-        tools:context=".Initial">
+        app:layout_constraintTop_toTopOf="@id/topguide"
+        app:layout_constraintStart_toStartOf="@id/leftguide"
+        app:layout_constraintEnd_toEndOf="@id/rightguide">
 
-        <!--view pager for displaying our slides-->
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/idViewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            android:layout_weight="12"
+            android:textAlignment="center"/>
 
         <LinearLayout
+            android:id="@+id/idLLDots"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="15dp"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent"
             android:orientation="horizontal"
-            android:weightSum="5">
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="2" />
-            <LinearLayout
-                android:id="@+id/idLLDots"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal" />
+            android:gravity="center_horizontal"
+            android:textAlignment="center"
+            android:layout_weight="1">
         </LinearLayout>
+    </LinearLayout>
 
-    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100px"
         app:layout_constraintTop_toBottomOf="@+id/slider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/leftguide"
+        app:layout_constraintEnd_toEndOf="@id/rightguide"
         android:gravity="center"
         android:orientation="vertical">
-
             <Button
                 android:id="@+id/create"
                 android:text="@string/create"
                 style="@style/buttonOutlinedRed"
                 android:backgroundTint="@color/button_selector"></Button>
-
             <Button
                 android:id="@+id/login"
                 android:text="@string/login"
                 style="@style/buttonOutlinedRed"
                 android:backgroundTint="@color/button_selector"></Button>
     </LinearLayout>
+
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/leftguide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.20"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/rightguide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.8"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/topguide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".35"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/midguide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".8"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
