--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -16,8 +16,7 @@
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="260dp"/>
+        app:layout_constraintTop_toTopOf="@id/topguide"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/etusername"
@@ -28,7 +27,8 @@
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
         app:layout_constraintTop_toBottomOf="@id/tvsignup"
-        app:startIconDrawable="@drawable/ic_usu">
+        app:startIconDrawable="@drawable/ic_usu"
+        app:hintTextColor="@color/secondary_dark">
 
         <EditText
             android:layout_width="match_parent"
@@ -47,7 +47,8 @@
         app:layout_constraintStart_toStartOf="@id/leftguide"
         app:layout_constraintTop_toBottomOf="@id/etusername"
         app:passwordToggleEnabled="true"
-        app:startIconDrawable="@drawable/ic_lock">
+        app:startIconDrawable="@drawable/ic_lock"
+        app:hintTextColor="@color/secondary_dark">
 
         <EditText
             android:id="@+id/password"
@@ -67,7 +68,8 @@
         app:layout_constraintStart_toStartOf="@id/leftguide"
         app:layout_constraintTop_toBottomOf="@id/etpassword"
         app:passwordToggleEnabled="true"
-        app:startIconDrawable="@drawable/ic_lock">
+        app:startIconDrawable="@drawable/ic_lock"
+        app:hintTextColor="@color/secondary_dark">
 
         <EditText
             android:id="@+id/repassword"
@@ -152,5 +154,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.8"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/topguide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
