--- a/app/src/main/res/layout/slider_layout.xml
+++ b/app/src/main/res/layout/slider_layout.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/idRLSlider"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <!--text view for displaying
         our heading-->
