--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -81,7 +81,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnlogin"
+        android:id="@+id/btnSingUp"
         style="@style/buttonOutlinedRed"
         android:backgroundTint="@color/button_selector"
         android:layout_marginTop="5dp"
@@ -96,7 +96,7 @@
         android:text="@string/cancel"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
-        app:layout_constraintTop_toBottomOf="@id/btnlogin" />
+        app:layout_constraintTop_toBottomOf="@id/btnSingUp" />
 
 <!--    <TextView-->
 <!--        android:id="@+id/tvother"-->
