--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="@id/topguide"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etusername"
+        android:id="@+id/etemail"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -31,6 +31,7 @@
         app:hintTextColor="@color/secondary_dark">
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/usu"
@@ -45,7 +46,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
-        app:layout_constraintTop_toBottomOf="@id/etusername"
+        app:layout_constraintTop_toBottomOf="@id/etemail"
         app:passwordToggleEnabled="true"
         app:startIconDrawable="@drawable/ic_lock"
         app:hintTextColor="@color/secondary_dark">
@@ -81,7 +82,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnSingUp"
+        android:id="@+id/btnSignUp"
         style="@style/buttonOutlinedRed"
         android:backgroundTint="@color/button_selector"
         android:layout_marginTop="5dp"
@@ -96,7 +97,7 @@
         android:text="@string/cancel"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
-        app:layout_constraintTop_toBottomOf="@id/btnSingUp" />
+        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
 
 <!--    <TextView-->
 <!--        android:id="@+id/tvother"-->
