--- a/app/src/main/res/color/button_selector.xml
+++ b/app/src/main/res/color/button_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:color="@color/secondary_dark"/>
-    <item android:state_pressed="false" android:color="@color/secondary"/>
+    <item android:state_pressed="true" android:color="@color/secondary"/>
+    <item android:state_pressed="false" android:color="@color/dark_gray"/>
     />
 </selector>
