--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".EditProfile">
 
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+   <com.google.android.material.bottomnavigation.BottomNavigationView
+       android:id="@+id/bottom_navigation"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:menu="@menu/bottom_navigation_menu"
+       style="@style/Widget.App.BottomNavigationView"
+       android:backgroundTint="@color/button_selector"
+       />
 </androidx.constraintlayout.widget.ConstraintLayout>
