--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -31,11 +31,11 @@
         app:hintTextColor="@color/secondary_dark">
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/email"
-            android:theme="@style/lineET"
-            android:inputType="textEmailAddress"/>
+            android:theme="@style/lineET" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -82,7 +82,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnSingUp"
+        android:id="@+id/btnSignUp"
         style="@style/buttonOutlinedRed"
         android:backgroundTint="@color/button_selector"
         android:layout_marginTop="5dp"
@@ -97,50 +97,50 @@
         android:text="@string/cancel"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
-        app:layout_constraintTop_toBottomOf="@id/btnSingUp" />
+        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/tvother"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:text="@string/other"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/rightguide"-->
-<!--        app:layout_constraintStart_toStartOf="@id/leftguide"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/btncancel">-->
+    <!--    <TextView-->
+    <!--        android:id="@+id/tvother"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="15dp"-->
+    <!--        android:text="@string/other"-->
+    <!--        app:layout_constraintEnd_toEndOf="@id/rightguide"-->
+    <!--        app:layout_constraintStart_toStartOf="@id/leftguide"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/btncancel">-->
 
-<!--    </TextView>-->
+    <!--    </TextView>-->
 
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/btngoogle"-->
-<!--        android:layout_width="30dp"-->
-<!--        android:layout_height="30dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:background="@drawable/google"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/btnfacebook"-->
-<!--        app:layout_constraintStart_toStartOf="@id/leftguide"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/tvother" />-->
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/btngoogle"-->
+    <!--        android:layout_width="30dp"-->
+    <!--        android:layout_height="30dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="@drawable/google"-->
+    <!--        app:layout_constraintEnd_toStartOf="@id/btnfacebook"-->
+    <!--        app:layout_constraintStart_toStartOf="@id/leftguide"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/tvother" />-->
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/btnfacebook"-->
-<!--        android:layout_width="30dp"-->
-<!--        android:layout_height="30dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:background="@drawable/facebook"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/btnapple"-->
-<!--        app:layout_constraintStart_toEndOf="@id/btngoogle"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/tvother" />-->
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/btnfacebook"-->
+    <!--        android:layout_width="30dp"-->
+    <!--        android:layout_height="30dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="@drawable/facebook"-->
+    <!--        app:layout_constraintEnd_toStartOf="@id/btnapple"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/btngoogle"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/tvother" />-->
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/btnapple"-->
-<!--        android:layout_width="30dp"-->
-<!--        android:layout_height="30dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:background="@drawable/apple"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/rightguide"-->
-<!--        app:layout_constraintStart_toEndOf="@id/btnfacebook"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/tvother" />-->
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/btnapple"-->
+    <!--        android:layout_width="30dp"-->
+    <!--        android:layout_height="30dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="@drawable/apple"-->
+    <!--        app:layout_constraintEnd_toEndOf="@id/rightguide"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/btnfacebook"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/tvother" />-->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/leftguide"
@@ -163,3 +163,4 @@
         app:layout_constraintGuide_percent=".4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
