--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -9,7 +9,7 @@ tools:context=".fragments.FavouritesFragment">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="FAVOURITES FRAGMENT"
+    android:text="@string/favfragment"
     android:textSize="30sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
