In EditProfile Email convert multiline type

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -106,7 +106,7 @@
                     android:clickable="false"
                     android:cursorVisible="false"
                     android:theme="@style/lineET"
-                    android:inputType="none" />
+                    android:inputType="textMultiLine" />
             </com.google.android.material.textfield.TextInputLayout>
 
 <!--            <com.google.android.material.textfield.TextInputLayout-->
