Added the login with google but it still doesn't work

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -104,7 +104,10 @@
                     android:layout_height="match_parent"
                     android:hint="@string/email"
                     android:theme="@style/lineET"
-                    android:inputType="textEmailAddress" />
+                    android:focusable="false"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:inputType="none"  />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!--<com.google.android.material.textfield.TextInputLayout
